<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/line1">

        <Button
            android:background="#F8BBD0"
            android:id="@+id/back_find_schedule_driver"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Back"/>

        <TextView
            android:id="@+id/DrivertextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:text="View Existing Carpools"
            android:textColor="#C51162"
            android:textSize="25sp" />
    </LinearLayout>


    <ListView
        android:id="@+id/Driverlistview1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/line1"
        android:layout_marginTop="5dp"
        android:cacheColorHint="#00000000" />

</RelativeLayout>