...
            android:textSize="30sp"
            android:padding="15dp"
            android:layout_gravity="center"/>


        <EditText
            android:id="@+id/user_driverlicense_update_driver"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="*DriverLicense"/>
...
